# Orbit

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ADDING_PROVIDERS.md  LIVE_PROVIDERS.md  RELEASING.md
scripts/: generate-icon.mjs
src/: App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/usage/: antigravity.rs  claude.rs  codex.rs  mod.rs
src-tauri/tests/: smoke.rs
src/components/: Button.module.css  Button.tsx  ChartCard.module.css  ChartCard.tsx  GlassSurface.module.css  GlassSurface.tsx  Icon.tsx  ProviderCard.module.css  ProviderCard.test.tsx  ProviderCard.tsx  SectionHeader.module.css  SectionHeader.tsx  SegmentedControl.module.css  SegmentedControl.tsx  SettingsRow.module.css  SettingsRow.tsx  StatusRow.module.css  StatusRow.tsx  Toggle.module.css  Toggle.tsx  UsageChart.module.css  UsageChart.tsx  UsageRing.module.css  UsageRing.test.tsx  UsageRing.tsx  controls.test.tsx
src/hooks/: useAutoRefresh.ts  useNow.ts  useReducedMotion.ts
src/lib/: autostart.ts  chartData.test.ts  chartData.ts  colors.ts  liveUsage.ts  notifications.ts  persistence.ts  summary.test.ts  summary.ts  tauri.ts  time.test.ts  time.ts
src/providers/: antigravity.ts  claude.ts  codex.ts  demo.test.ts  demo.ts  index.test.ts  index.ts  types.ts
src/store/: usageStore.test.ts  usageStore.ts
(+16 files in other folders)
