[package]
name = "orbit"
version = "0.1.0"
description = "A calm, local-first view of your remaining AI usage."
authors = ["Orbit contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "orbit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target."cfg(target_os = \"macos\")".dependencies]
# Transparent panel chrome relies on the private API flag set in tauri.conf.json.

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
